--- a/static-folder/index.html
+++ b/static-folder/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">Form</a>
+        <a href="javascript.html">Javascript</a>
+    </nav>
     <main>
         <form action="/login" method="POST">
             <h3>
